kubernetes/apps/base/observability/goldpinger/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldpinger
spec:
  hostnames:
    - "${SUBDOMAIN}.${CLUSTER_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: goldpinger
          namespace: observability
          port: 80
